# jidouteki-yaml

./: README.md  pyproject.toml
src/jidouteki/: __init__.py
src/jidouteki/driver/: __init__.py  utils.py
src/jidouteki/fetchers/: __init__.py  network.py  request.py
src/jidouteki/main/: __init__.py
src/jidouteki/parsers/: __init__.py  enumerate.py  list.py  live.py  network.py  request.py
src/jidouteki/spec/: __init__.py  exceptions.py  filters.py  meta.py  selectors.py  website.py
